<resources>
    <string name="app_name">LGank</string>
    <string name="title_home">Home</string>
    <string name="title_read">Read</string>
    <string name="title_me">Me</string>

    <string name="menu_draw_client">前端</string>
    <string name="menu_draw_app">APP</string>
    <string name="menu_draw_recommend">瞎推荐</string>
    <string name="menu_draw_video">休息视频</string>
    <string name="menu_draw_expandresource">拓展资源</string>
    <string name="menu_draw_theme">主题切换</string>

    <string name="title_activity_guide">GuideActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
